added test signing checks (works against qemu and other cheapos), added 6 new vmware checks via WMI, added more encryption

--- a/Exe_Morphing_Util/Exe_Morphing_Util.csproj
+++ b/Exe_Morphing_Util/Exe_Morphing_Util.csproj
@@ -51,7 +51,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>cool.ico</ApplicationIcon>
+    <ApplicationIcon>wjhfhf.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -111,6 +111,7 @@
   <ItemGroup>
     <Content Include="63dabf311.ico" />
     <Content Include="cool.ico" />
+    <Content Include="wjhfhf.ico" />
   </ItemGroup>
   <ItemGroup>
     <COMReference Include="WMPLib">
